feat: Add lite agent and convert to pnpm monorepo
Convert project to pnpm workspace and add hand-rolled lite agent implementation
for learning agent fundamentals without framework abstractions.

Changes:
- Convert to pnpm monorepo with packages/api and packages/agent-lite
- Add POST /run-lite endpoint with custom agent loop (no LangChain)
- Implement lite tools (list_files, read_file, write_file) with sandbox-lite isolation
- Add OPENAI_LITE_MODEL and OPENAI_LITE_BASE_URL configuration options
- Update documentation to reflect monorepo structure and dual agent setup
- Add requirements and design docs for lite agent implementation

The existing LangChain-based /run endpoint remains unchanged. Both agents
operate in separate sandboxes for security.

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,7 @@
 # Dependencies
 node_modules/
 package-lock.json
+pnpm-lock.yaml
 
 # Environment variables
 .env
@@ -24,6 +25,8 @@ pids/
 # Sandbox directory (optional - remove if you want to track sandbox files)
 sandbox/*
 !sandbox/.gitkeep
+sandbox-lite/*
+!sandbox-lite/.gitkeep
 
 # OS files
 .DS_Store
