--- a/package.json
+++ b/package.json
@@ -6,16 +6,11 @@
   "engines": {
     "node": ">=20"
   },
+  "workspaces": [
+    "packages/*"
+  ],
   "scripts": {
-    "start": "node src/server.js",
-    "dev": "node --watch src/server.js"
-  },
-  "dependencies": {
-    "@langchain/core": "latest",
-    "@langchain/openai": "latest",
-    "dotenv": "latest",
-    "express": "latest",
-    "langchain": "latest",
-    "zod": "latest"
+    "start": "pnpm --filter api start",
+    "dev": "pnpm --filter api dev"
   }
 }
